package com.example.todolist.Phrases;

public interface IMotivationGenerator {

    /*
    Интерфейс гнератора мотивационных фраз
    с использованием паттерна "Стратегия"
     */

    public String generateMotivation();
}
