package com.example.todolist.Phrases;

public interface MotivationStrategy {

    /*
    Интерфейс для классов стратегий
     */

    String getMotivationalPhrase();
}
